snapshots/parsers/cst/type_statements/type_with_dynamic_array.snap
---
source: src/parsers/cst/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: DynamicBuffer
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Items
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: VariantKeyword
          text: Variant
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Count
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: LongKeyword
          text: Long
        - kind: Newline
          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
