snapshots/parsers/cst/type_statements/type_with_multiple_array_dimensions.snap
---
source: src/parsers/cst/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Matrix
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Data
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "1"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "10"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "10"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DoubleKeyword
          text: Double
        - kind: Newline
          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
